Remove distributed and inconsistent data sources (#6)
* Removed the idea of SQLUserDataManager and GuildDataManager and instead use a unified database.
* Removed the stats and levelling system due to lack of usage
* Use a Neo4j database - README updated with instructions on how to set up